# macro-llm-tournament

./: .env.example  .gitignore  CURRENT.md  Makefile  README.md  pyproject.toml  requirements.txt  research_history.md
configs/: macro_playground_fixture_spec.json
configs/behavior_profiles/: empirical_bridge_v4.json  empirical_bridge_v5_stabilized.json  state_policy_gpt55.json
configs/dynamic_macro/: confirmatory_june_2026_v1.json  development_policy_inertia_v3.json  development_policy_partial_v4.json  development_v2.json  household_scale_development_v1.json
configs/macro_tournament/: confirmatory_fred_2026_02_v1.json  development_v1.json  development_v2.json  development_v2b_gain_frontier.json  development_v3.json  incumbent_v1.json
data_provenance/: data_events.jsonl
examples/ecology_fixture/: history.csv  households.csv  origin_snapshot.json
reports/: current_ecology_report.md  dynamic_macro_confirmation_source_lock_v1.json  dynamic_macro_development_v1_evidence.json  dynamic_macro_household_scale_v1_evidence.json  empirical_bridge_v3_spec.md  empirical_bridge_v4_spec.md  empirical_bridge_v5_stabilized_spec.md  hank_lite_belief_demand_economy_report.md  macro_confirmatory_fred_2026_02_v1_evidence.json  macro_incumbent_v1_evidence.json  macro_simulation_report.md  macro_tournament_confirmatory_registry.json  macro_tournament_development_v1_evidence.json  macro_tournament_development_v2_evidence.json  macro_tournament_development_v2b_gain_frontier_evidence.json  macro_tournament_development_v3_evidence.json  macro_validity_scorecard_report.md  phase4_v5_alignment_evidence.json  prior_update_environment_v2_evidence.json  prior_update_environment_v2_prereg.md  research_retrospective.md
src/macro_llm_tournament/: __init__.py  agent_behavior.py  agent_common.py  agent_economy.py  agent_llm.py  agent_report.py  agent_runtime.py  agent_targets.py  agent_types.py  behavior_architecture_fidelity.py  behavior_ecology.py  behavior_gate.py  belief_calibration.py  combine_prior_update_panels.py  data_provenance.py  demand_economy.py  demand_timeline.py  demand_vintage_audit.py  demand_vintage_oos.py  download_data.py  dynamic_macro_clients.py  dynamic_macro_common.py  dynamic_macro_confirmatory.py  dynamic_macro_economy.py  dynamic_macro_household_scale.py  dynamic_macro_household_scale_artifacts.py  dynamic_macro_household_scale_validation.py  dynamic_macro_inputs.py  dynamic_macro_tournament.py  ecology.py  ecology_engine.py  ecology_feedback.py  ecology_feedback_runner.py  ecology_financial_states.py  ecology_history.py  ecology_households.py  ecology_information.py  ecology_inputs.py  ecology_macro.py  ecology_models.py  (+39 more)
src/macro_llm_tournament/data/: macro_performance_targets.csv  public_behavior_targets.csv
tests/: test_behavior_ecology.py  test_demand_frequency.py  test_demand_replay_integrity.py  test_dynamic_macro_batching.py  test_dynamic_macro_confirmatory.py  test_dynamic_macro_economy.py  test_dynamic_macro_household_scale.py  test_dynamic_macro_integration.py  test_dynamic_macro_tournament.py  test_ecology.py  test_ecology_engine.py  test_ecology_feedback.py  test_ecology_financial_states.py  test_ecology_history.py  test_ecology_information.py  test_ecology_io.py  test_ecology_macro.py  test_ecology_observability.py  test_ecology_realizations.py  test_ecology_retrospective.py  test_forecast_tournament.py  test_frozen_vintage_bundle.py  test_macro_performance.py  test_macro_playground.py  test_macro_tournament.py  test_persistent_households.py  test_persona_elicitation_campaign.py  test_phase4_matched_twins.py  test_prepare_dynamic_macro_panel.py  test_prepare_prior_update_extension.py  test_prepare_sce_microdata.py
