[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-llm-tournament"
version = "0.1.0"
description = "As-of macro forecast tournaments for testing LLM belief engines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rohit"}]
dependencies = [
  "numpy",
  "pandas",
  "requests",
  "xlrd",
  "openpyxl",
  "python-dotenv",
]

[project.scripts]
macro-llm-forecast-tournament = "macro_llm_tournament.forecast_tournament:main"
macro-llm-download-data = "macro_llm_tournament.download_data:main"
macro-llm-postcutoff-tournament = "macro_llm_tournament.postcutoff_tournament:main"
macro-llm-agent-economy = "macro_llm_tournament.agent_economy:main"
macro-llm-behavior-gate = "macro_llm_tournament.behavior_gate:main"
macro-llm-postcutoff-behavior-gate = "macro_llm_tournament.postcutoff_behavior_gate:main"

[tool.setuptools.packages.find]
where = ["src"]
