[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-llm-tournament"
version = "0.2.0"
description = "A household-first rolling macroeconomy driven by isolated LLM beliefs and intentions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rohit"}]
dependencies = [
  "numpy",
  "pandas",
  "requests",
  "openpyxl",
  "python-dotenv",
]

[project.scripts]
macro-llm-ecology = "macro_llm_tournament.ecology:main"
macro-llm-ecology-origin = "macro_llm_tournament.ecology_inputs:main"
macro-llm-ecology-realize = "macro_llm_tournament.ecology_realizations:main"
macro-llm-household-cohort = "macro_llm_tournament.persistent_households:main"
macro-llm-frozen-vintage = "macro_llm_tournament.frozen_vintage_bundle:main"
macro-llm-prepare-sce = "macro_llm_tournament.prepare_sce_microdata:main"

[tool.setuptools.packages.find]
where = ["src"]
